--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+html, body {
+background-color: #525252;
+
+}
+
 .App {
   text-align: center;
+  background-color: #525252;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: #333;
+  width: 1286px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #bea550;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 150px;
+  margin: 200px auto 40px;
+  line-height: 175px;
+  letter-spacing: 7px;
+  text-shadow: 2px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  background: -webkit-linear-gradient(#f7e47b, #A07923);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
+h2 {
+  font-size: 50px;
+  font-weight: 400;
+  color: #f1d744;
+  letter-spacing: 7px;
+}
+
+button {
+  height: 200px;
+  width: 950px;
+  border-radius: 55px;
+  border-width: 10px;
+  border-color: #f1d744;
+  background: none;
+  outline: none;
+  color: linear #fff;
+  background: -webkit-linear-gradient(#f7e47b, #A07923);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+  font-size: 120px;
+  margin: 0px auto 200px;
+  filter: drop-shadow(0px 0px 10px rgba(202, 170, 101, 0.35));
+}
+
+
