--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,6 @@ background-color: #525252;
   color: #bea550;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 h1 {
   font-size: 150px;
@@ -56,11 +53,32 @@ button {
   outline: none;
   color: linear #fff;
   background: -webkit-linear-gradient(#f7e47b, #A07923);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  font-size: 120px;
+  margin: 0px auto 200px;
+  filter: drop-shadow(0px 0px 10px rgba(202, 170, 101, 0.35));
+}
+
+link {
+  height: 200px;
+  width: 950px;
+  border: solid;
+  border-radius: 55px;
+  border-width: 10px;
+  border-color: #f1d744;
+  background: none;
+  outline: none;
+  color: linear #fff;
+  background: -webkit-linear-gradient(#f7e47b, #A07923);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
   font-size: 120px;
   margin: 0px auto 200px;
   filter: drop-shadow(0px 0px 10px rgba(202, 170, 101, 0.35));
 }
+
+
+
 
 
